Fixed convertHumanGeneList function not appearing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,9 @@ export(DE_analysis)
 export(DE_analysis_lrt)
 export(MDSplot)
 export(barplot_gsea)
+export(convertHumanGeneList)
 export(convertMouseGeneList)
+export(convertZebratoHumanGeneList)
 export(corrplot)
 export(dotplot_gsea)
 export(gsea_input)
